fix: 🐛 Media page coult overflow watch episodes
- If series has many episodes like HxH the watch episodes would prevent
  the page from scaling down to mobile

--- a/src/index.css
+++ b/src/index.css
@@ -207,6 +207,10 @@
     }
   }
 
+  .no-overflow {
+    overflow: hidden;
+  }
+
   .grid-column-auto-fill {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(min(100%, max(var(--grid-column-width, 20rem), 100% / var(--grid-max-column-count, 999) - var(--gap, .5rem))), 1fr));
